feat: now creating a smaller image using jlink to create custom jre runtime